# rice-factor

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  debug_config.py  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
docs/: gap-analysis-v2.md  gap-analysis-v3.md  gap-analysis.md  index.md  milestones-14-to-22-plan.md
docs/assets/demos/: demo.tape
docs/contributing/: CHANGELOG.md  README.md  SECURITY.md  development.md
docs/guides/: drift-configuration.md
docs/guides/getting-started/: concepts.md  first-project.md  installation.md
docs/guides/how-to/: configure-llm-providers.md  customize-templates.md  integrate-ci-cd.md  use-tui.md
docs/guides/troubleshooting/: common-errors.md  faq.md
docs/guides/tutorials/: artifact-lifecycle.md  basic-workflow.md  tdd-workflow.md  web-ui-walkthrough.md
docs/guides/web-interface/: manual.md  overview.md  workflows.md
docs/includes/: abbreviations.md
docs/internal/: index.md  milestones-8-to-11-plan.md
docs/internal/milestones/: 14-to-22-plan.md
docs/internal/project/: design.md  requirements.md
docs/internal/raw/: 01-end-to-end-design.md  03-Artifact-Builder.md  05-full-cli-agent-workflow-end-to-end-usage.md  Item-01-mvp-example-walkthrough-end-to-end.md  Phase-01-mvp.md  README.md  item-04-Multi-Agent-Coordination-Model-and-Run-Modes.md  item-05-Failure-Recovery-and-Resilience-Model.md  product-requirements-specification.md
docs/milestones/01-architecture/: requirements.md
docs/milestones/02-artifact-system/: design.md
docs/milestones/03-cli-core/: design.md  requirements.md
docs/overrides/: .gitkeep
docs/raw/: 02-Formal-Artifact-Schemas.md  04-repository-and-system-layout.md  06-tools-to-integrte-with-or-learn-from.md  REFERENCE-IMPLEMENTATION-SKELETON.md  implementation-ready-specification.md  item-02-executor-design-and-pseudocode.md  item-03-ci-cd-pipeline-and-automation-strategy.md
docs/stylesheets/: extra.css
rice-factor-vscode/: .eslintrc.json  README.md  package.json
rice-factor-vscode/src/: approvalService.ts  artifactViewer.ts  diffPreview.ts  extension.ts  workflowView.ts
rice-factor-vscode/test/: extension.test.ts  runTest.ts
rice_factor/: __init__.py
rice_factor/adapters/: __init__.py
rice_factor/config/: __init__.py  capability_registry.yaml  defaults.yaml  notifications.yaml  rate_limits.yaml  run_mode_config.py  settings.py  storage.yaml
rice_factor/domain/: __init__.py
rice_factor/migrations/: __init__.py  add_timestamps.py
rice_factor/templates/: __init__.py
rice_factor_web/: __init__.py
rice_factor_web/backend/: __init__.py  config.py  deps.py  main.py
rice_factor_web/docker/: .env.example  Dockerfile  docker-compose.yml
rice_factor_web/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
rice_factor_web/tests/: __init__.py  conftest.py
schemas/: architecture_plan.schema.json  artifact.schema.json  failure_report.schema.json  implementation_plan.schema.json  project_plan.schema.json  reconciliation_plan.schema.json  refactor_plan.schema.json  scaffold_plan.schema.json  test_plan.schema.json  validation_result.schema.json
scripts/: capture_cli_screenshots.py  capture_tui_screenshots.py  test_screens_tui.py  test_simple_tui.py  test_workflow_tui.py
tests/: __init__.py  conftest.py
tests/cli/: test_all_commands.py  test_commands.py
tests/e2e/: __init__.py  test_cli_e2e.py  test_tui_e2e.py
tests/integration/: conftest.py  test_e2e_workflow.py
tests/tui/: test_app_flow.py
tests/unit/: test_cli.py  test_config.py  test_version.py
(+781 files in other folders)
